# Allianz-BonusDrive-Client

./: .env.example  LICENSE  README.md  client.py  constants.py  main.py  photon.py  print.py  pyproject.toml
.github/workflows/: publish.yml
src/allianz_bonusdrive_client/: __init__.py  cli.py  client.py  main.py  print.py
src/allianz_bonusdrive_client/utils/: dataclasses.py  photon.py
tests/: test_cli.py  test_client.py
