[project]
name = "allianz-bonusdrive-client"
version = "0.3.0"
description = "A client for the Allianz BonusDrive program"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi==2025.10.5",
    "charset-normalizer==3.4.3",
    "idna==3.10",
    "polyline==2.0.3",
    "requests==2.32.5",
    "urllib3==2.5.0",
]

[project.optional-dependencies]
cli = [
    "colorama==0.4.6",
    "python-dotenv==1.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"