[project]
name = "Allianz-Bonusdrive-Client"
version = "0.5.6"
description = "A client for the Allianz BonusDrive program"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { email = "hello@xathon.de" }
]
license = { text = "MIT" }
keywords = ["allianz", "bonusdrive", "telematics", "api-client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "certifi>=2025.10.5",
    "charset-normalizer>=3.4.0,<4.0.0",
    "idna>=3.10,<4.0",
    "polyline>=2.0.3,<3.0.0",
    "requests>=2.32.0,<3.0.0",
    "urllib3>=2.5.0,<3.0.0",
]

[project.optional-dependencies]
cli = [
    "colorama>=0.4.6,<1.0.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.urls]
Homepage = "https://github.com/xathon/Allianz-BonusDrive-Client"
Repository = "https://github.com/xathon/Allianz-BonusDrive-Client"
Issues = "https://github.com/xathon/Allianz-BonusDrive-Client/issues"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"